first section title and image add

--- a/index.html
+++ b/index.html
@@ -4,12 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Developer Portfolio </title>
+    <!-- google font add here -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
-<body>
-    <p>website</p>
+<body class="rubik-normal">
     <header>
+        <nav>
+            <h3 class="nav-title">Rub<span class="text-primary">e</span>l</h3>
+            <ul>
+                <li><a class="drak-2" href="">Home</a></li>
+                <li><a class="drak-2" href="">Portfolio</a></li>
+                <li><a class="drak-2" href="">About</a></li>
+                <li><a class="drak-2" href="">Contact</a></li>
+                <li><a href=""><button class="btn-primary">Hire Me</button></a></li>
+                
+            </ul>
+            
+        </nav>
+        <div class="banner"></div>
+        <div class="banner-content"></div>
+        <div class="h4">Hi, I am</div>
+        <h1> Mary Hard</h1>
+        <p class="banner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti placeat esse accusantium alias possimus saepe consequatur nihil mollitia. Numquam neque, architecto consectetur repudiandae eligendi assumenda ipsa facilis dolores quas officiis.</p>
+        <img src="assets/hardy.png" alt="">
 
     </header>
+
+
     <main>
 
     </main>
