about title and discriptions add complete

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body class="rubik-normal">
-  <header class="header">
+  <header class="header secondary-bg">
       <nav>
         <h3 class="nav-title">Rub<span class="text-primary">e</span>l</h3>
         <ul>
@@ -43,8 +43,15 @@
 
 
   <main>
-
+    <section class="about secondary-bg">
+        <h3 class="section-title"> About Me</h3>
+        <p class="section-descriptions">WordPress Website Designer and Ecommerce Expert (Woocommerce, Shopify).
+        </p>
+        <div class="about-items"></div>
+    </section>
+    
   </main>
+
 
   <footer>
 
