second section design complete

--- a/index.html
+++ b/index.html
@@ -47,7 +47,26 @@
         <h3 class="section-title"> About Me</h3>
         <p class="section-descriptions">WordPress Website Designer and Ecommerce Expert (Woocommerce, Shopify).
         </p>
-        <div class="about-items"></div>
+        <div class="about-items">
+            <!-- .about-item*4>p.item-title+p.item-description -->
+             <div class="about-item">
+                <p class="item-title">Name</p>
+                <p class="item-description">Mary Hardy</p>
+             </div>
+             <div class="about-item">
+                <p class="item-title">Email</p>
+                <p class="item-description">Codecanvase@gmail.com</p>
+             </div>
+             <div class="about-item">
+                <p class="item-title">Date of birth:</p>
+                <p class="item-description">8 December 1994</p>
+             </div>
+             <div class="about-item">
+                <p class="item-title">From</p>
+                <p class="item-description">Bangladesh</p>
+             </div>
+        </div>
+
     </section>
     
   </main>
