--- a/index.html
+++ b/index.html
@@ -103,10 +103,73 @@
         </div>
  
       </section>
+
+
+      <section class="resume">
+        <h3 class="section-title">A summary of my Resume </h3>
+        <div class="resume-container">
+            <!-- .resume-column*2>h3.resume-column-title+.experience*3>h4.experience-title+h5.experience-sub-title+.experience-description -->
+            <div class="resume-column">
+                <h3 class="resume-column-title">My Educations</h3>
+                <div class="experience">
+                    <h4 class="experience-title">Management</h4>
+                    <h5 class="experience-sub-title">Azizul Haque college</h5>
+                    <div class="experience-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam ipsam optio aperiam porro eius maxime delectus odio, iure, placeat tenetur mollitia eveniet quisquam? Magnam eveniet voluptatum atque. Voluptate, sit voluptatem!</div>
+                </div>
+                <hr>
+
+                <div class="experience">
+                    <h4 class="experience-title">Marketing</h4>
+                    <h5 class="experience-sub-title">Azizul Haque college</h5>
+                    <div class="experience-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam ipsam optio aperiam porro eius maxime delectus odio, iure, placeat tenetur mollitia eveniet quisquam? Magnam eveniet voluptatum atque. Voluptate, sit voluptatem!</div>
+                </div>
+                <hr>
+            </div>
+
+            <div class="resume-column">
+                <h3 class="resume-column-title">My Experience</h3>
+                <div class="experience">
+                    <h4 class="experience-title">Marketing</h4>
+                    <h5 class="experience-sub-title">Azizul Haque college</h5>
+                    <div class="experience-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam ipsam optio aperiam porro eius maxime delectus odio, iure, placeat tenetur mollitia eveniet quisquam? Magnam eveniet voluptatum atque. Voluptate, sit voluptatem!</div>
+                </div>
+                <hr>
+
+
+                <div class="experience">
+                    <h4 class="experience-title">Marketing</h4>
+                    <h5 class="experience-sub-title">Azizul Haque college</h5>
+                    <div class="experience-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam ipsam optio aperiam porro eius maxime delectus odio, iure, placeat tenetur mollitia eveniet quisquam? Magnam eveniet voluptatum atque. Voluptate, sit voluptatem!</div>
+                </div>
+                <hr>
+            </div>
+        </div>
+        <div class="text-center resume-download-cv"><button class="btn-primary">download CV</button>
+        </div>
+      </section>
+
+
   </main>
 
 
-  <footer>
+
+
+  <footer class="secondary-bg">
+
+    <div class="footer-column">
+        <!-- h3.section-title -->
+         <h3 class="section-title">Lets Connect</h3>
+         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit</p>
+         <div>
+            <a href=""><img src="assets/icons/facebook.png" alt=""></a>
+            <a href=""><img src="assets/icons/insta.png" alt=""></a>
+            <!-- a>img -->
+         </div>
+    </div>
+
+
+    <div class="footer-column"></div>
+
 
         
   </footer>
