--- a/index.html
+++ b/index.html
@@ -169,6 +169,15 @@
 
 
     <div class="footer-column"></div>
+    <!-- h3.section-title -->
+     <h3 class="section-title">Let Inbox Me</h3>
+     <form action="">
+        <input type="text" name="" id="" placeholder="Your Name">
+        <input type="email" name="" id="" placeholder="Your Email">
+        <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+        <!-- input:submit -->
+         <input type="submit" value="Submit">
+     </form>
 
 
         
