website fab icon add

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="assets/fab-rubal.png" type="image/x-icon">
     <title>Web Developer Portfolio </title>
     <!-- google font add here -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
