--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
                 I’m a professional WordPress Website Designer and Ecommerce Expert (Woocommerce, Shopify). I’ve been working on WordPress and Shopify since 2016 and build many successful businesses. Last 5 years I have completed over 400+ website projects with 100% client satisfaction. I’ve worked with buyers from different continents around the world at different marketplaces.
             </p>
             
-            <button class="btn-primary">Contact With Me</button>
+            
+            <a href="#footer"><button class="btn-primary">Contact With Me</button></a>
 
         </div>
         <img class="banner-profile-pic" src="assets/rubal-alam.png">
@@ -157,7 +158,7 @@
 
 
 
-  <footer class="secondary-bg">
+  <footer id="footer" class="secondary-bg">
     <!-- .footer-column*2 -->
      <div class="footer-column">
         <!-- h3.section-title -->
