--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
        
         <div class="skills-container">
             <!-- .skill*4>img+h4.skill-title+p.skill-description -->
-             <div class="skill">
+             <div class="skill-html">
                 <img src="assets/html.png" alt="">
                 <h4 class="skill-title">Hypertext Markup Language</h4>
                 <p class="skill-description">HTML is the standard markup language used to create and structure web pages. It provides the basic structure and content for web documents, defining elements such as headings, paragraphs, images, links, and more.</p>
              </div>
 
-             <div class="skill">
+             <div class="skill-css">
                 <img src="assets/css.png" alt="">
                 <h4 class="skill-title">Cascading Stuyle Sheets</h4>
                 <p class="skill-description">CSS is used to style HTML elements and dictate how web pages are presented to users. It controls the layout, colors, fonts, and overall visual appearance of web pages, enhancing their design and user experience.
@@ -131,7 +131,7 @@
                 </p>
              </div>
 
-             <div class="skill">
+             <div class="skill-java">
                 <img src="assets/js.png" alt="">
                 <h4 class="skill-title">JavaScript</h4>
                 <p class="skill-description">JavaScript is a versatile programming language that adds interactivity and behavior to web pages. It enables dynamic features like form validation, interactive maps, animations, and AJAX requests, making web pages more responsive and engaging.</p>
@@ -148,7 +148,7 @@
 
      <!-- what is do section start -->
       <section class="skills">
-        <h3 class="section-title text-center">My Current Target</h3>
+        <h3 class="section-title text-center">My Next Target</h3>
         <p class="section-descriptions text-center">Mastering JavaScript, React, Node.js, and MongoDB empowers developers to build modern, scalable web applications. JavaScript provides dynamic functionality, React simplifies UI development with reusable components, Node.js enables efficient server-side programming, and MongoDB offers flexible data storage solutions, collectively forming a robust stack for full-stack web development.</p>
        
         <div class="skills-container">
