--- a/index.html
+++ b/index.html
@@ -182,48 +182,26 @@
       </section>
 
 
-      <section class="resume">
-        <h3 class="section-title">A summary of my Resume </h3>
-        <div class="resume-container">
-            <!-- .resume-column*2>h3.resume-column-title+.experience*3>h4.experience-title+h5.experience-sub-title+.experience-description -->
-            <div class="resume-column">
-                <h3 class="resume-column-title">My Educations</h3>
-                <div class="experience">
-                    <h4 class="experience-title">Management</h4>
-                    <h5 class="experience-sub-title">Azizul Haque college</h5>
-                    <div class="experience-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam ipsam optio aperiam porro eius maxime delectus odio, iure, placeat tenetur mollitia eveniet quisquam? Magnam eveniet voluptatum atque. Voluptate, sit voluptatem!</div>
-                </div>
-                <hr>
-
-                <div class="experience">
-                    <h4 class="experience-title">Marketing</h4>
-                    <h5 class="experience-sub-title">Azizul Haque college</h5>
-                    <div class="experience-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam ipsam optio aperiam porro eius maxime delectus odio, iure, placeat tenetur mollitia eveniet quisquam? Magnam eveniet voluptatum atque. Voluptate, sit voluptatem!</div>
-                </div>
-                <hr>
-            </div>
-
-            <div class="resume-column">
-                <h3 class="resume-column-title">My Experience</h3>
-                <div class="experience">
-                    <h4 class="experience-title">Marketing</h4>
-                    <h5 class="experience-sub-title">Azizul Haque college</h5>
-                    <div class="experience-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam ipsam optio aperiam porro eius maxime delectus odio, iure, placeat tenetur mollitia eveniet quisquam? Magnam eveniet voluptatum atque. Voluptate, sit voluptatem!</div>
-                </div>
-                <hr>
 
 
-                <div class="experience">
-                    <h4 class="experience-title">Marketing</h4>
-                    <h5 class="experience-sub-title">Azizul Haque college</h5>
-                    <div class="experience-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam ipsam optio aperiam porro eius maxime delectus odio, iure, placeat tenetur mollitia eveniet quisquam? Magnam eveniet voluptatum atque. Voluptate, sit voluptatem!</div>
-                </div>
-                <hr>
-            </div>
-        </div>
-        <div class="text-center resume-download-cv"><button class="btn-primary">download CV</button>
+
+      <section class="newsletter" style="background-image: url(assets/handshake.jpg);">
+        <div class="newsletter-content">
+            <h1 class="newsletter-content-h1"> I need Support</h1>
+            <p>Sing up for our newsletter to stay update with the latest news and updates</p>
+            <form action="#" method="post">
+                <input type="email" name="email" placeholder="Your Email" required>
+                <input type="submit" value="Subscribe">
+            </form>
         </div>
       </section>
+
+
+
+
+
+
+
 
 
   </main>
