about section mobile responsive add

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
 <body class="rubik-normal">
-  <header class="hero-section-bg">
+  <header class="hero-section-bg hide">
       <nav>
         <h3 class="nav-title">Rub<span class="text-primary">e</span>l</h3>
         <ul>
@@ -96,7 +96,7 @@
 
     <!-- my inspriations sections -->
      <!-- what is do section start -->
-     <section class="skills">
+     <section class="skills hide">
         <h3 class="section-title text-center">My Inspiration</h3>
         <p class="section-descriptions text-center">Jhankar Mahbub is not just a Senior Developer, Entrepreneur, and Best-selling Author but also a guiding light in my journey. As the founder of Programming Hero, he embodies innovation and dedication to pushing boundaries in technology. His mentorship has shaped my approach, instilling a passion for problem-solving and a commitment to excellence in every project. Jhankar Mahbub's relentless pursuit of knowledge and his ability to empower others serve as a constant source of inspiration, driving me to continuously learn, innovate, and make a meaningful impact in the world of web development.</p>
         <div class="image-container">
@@ -147,7 +147,7 @@
 
 
      <!-- what is do section start -->
-      <section class="skills">
+      <section class="skills hide">
         <h3 class="section-title text-center">My Next Target</h3>
         <p class="section-descriptions text-center">Mastering JavaScript, React, Node.js, and MongoDB empowers developers to build modern, scalable web applications. JavaScript provides dynamic functionality, React simplifies UI development with reusable components, Node.js enables efficient server-side programming, and MongoDB offers flexible data storage solutions, collectively forming a robust stack for full-stack web development.</p>
        
@@ -185,7 +185,7 @@
 
 
 
-      <section class="newsletter" style="background-image: url(assets/handshake.jpg);">
+      <section class="newsletter hide" style="background-image: url(assets/handshake.jpg);">
         <div class="newsletter-content">
             <h1 class="newsletter-content-h1"> I need Support</h1>
             <p>Sing up for our newsletter to stay update with the latest news and updates</p>
@@ -205,7 +205,7 @@
 
 
 
-  <footer id="footer" class="footer-bg">
+  <footer id="footer" class="footer-bg hide">
     <!-- .footer-column*2 -->
     <div class="footer-colum">
         <p>&copy;2024 Rubal Alam. All rights reserved.</p>
